--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>pipeline-engine-definition-mysql</module>
         <module>pipeline-engine-step-grpc</module>
         <module>pipeline-engine-step-bean</module>
+        <module>pipeline-engine-json-jackson</module>
     </modules>
 
     <name>pipeline-engine</name>
